--- a/headtool.html
+++ b/headtool.html
@@ -156,8 +156,8 @@
 		r('discharge',disHd);
 		r('Pump',Head);
 		$('#accept').show();
-		
-		setData(nmAll(),HeadTool);
+
+		setData(document,HeadTool);
 		saveProp('headtool',HeadTool);
 	}
 	function em(t) {
