--- a/headtool.html
+++ b/headtool.html
@@ -186,5 +186,5 @@
 		$('#results td:nth-child(2):gt(0)').text('');
 		$('#accept').hide();
 	});
-	setCtls(nmAll(),HeadTool);
+	setCtls(document,HeadTool);
 </script>
