--- a/headtool.html
+++ b/headtool.html
@@ -157,7 +157,7 @@
 		r('Pump',Head);
 		$('#accept').show();
 
-		setData(document,HeadTool);
+		setData(HeadTool);
 		saveProp('headtool',HeadTool);
 	}
 	function em(t) {
@@ -186,5 +186,5 @@
 		$('#results td:nth-child(2):gt(0)').text('');
 		$('#accept').hide();
 	});
-	setCtls(document,HeadTool);
+	setCtls(HeadTool);
 </script>
