--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       function nm(nm,e=document) {
         return $(e).find(`[name=${nm}]`.replace('=]',']'));              
       }
-      function setData(e,d) {
+      function setData(d,e) {
         let v;
         nmAll(e).each(function(i,el) {
           switch (el.type) {
@@ -106,7 +106,7 @@
           d[$(el).attr('name')] = v;
         }); 
       }     
-      function setCtls(el,d) {
+      function setCtls(d,e) {
         nmAll(el).each((j,e)=>{
           const ctl = $(e), v = d[ctl.attr('name')];
           switch (e.type) {
