--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           });        
           saveProp('units',IMP);
           saveProp('conditions',[]);
-          saveProp('headtool',{Ds:14,Dd:10,Ps:5,Pd:124,Ks:1,Kd:1,suc:true});          
+          saveProp('headtool',{Ds:14,Dd:10,Ps:5,Pd:124,Ks:1,Kd:1});          
         }
         Cond = loadProp('conditions');
         Units = loadProp('units');
