--- a/conditions.html
+++ b/conditions.html
@@ -197,7 +197,7 @@
 			function (fn) {
 				if (fn) {
 					const hd=Object.keys(Cond[0]).sort();
-					var txt=0+'\n'+JSON.stringify(Units)+'\n'+hd.join('\t');
+					var txt=0+'\n'+JSON.stringify(Units)+'\n'+JSON.stringify(HeadTool)+'\n'+hd.join('\t');
 					Cond.forEach(function(d,i) {
 						txt+='\n'+
 							hd.map((nm,i)=> {
@@ -215,12 +215,13 @@
 					const 
 						fs = require('fs'),
 						lines=fs.readFileSync(fn[0],'utf8').split('\n'),
-						hd=lines[2].split('\t');
+						hd=lines[3].split('\t');
 					Cond=[];
 					Units=JSON.parse(lines[1]);
-					lines.slice(3).forEach((ln,row)=>{
+					HeadTool=JSON.parse(lines[2]);
+					lines.slice(4).forEach((ln,row)=>{
 						Cond.push({});
-						ln.split('\t').forEach((v,i)=>{//debugger;
+						ln.split('\t').forEach((v,i)=>{
 							Cond[row][hd[i]]=v;
 						});
 					});
