--- a/conditions.html
+++ b/conditions.html
@@ -179,8 +179,11 @@
 		});
 		saveProp('defCond',DefCond);
 		cvtObj(HeadTool,'Ps',3,nunits,{kPa:0.145037738007});
-		cvtObj(HeadTool,'Pd',3,nunits,{kPa:0.145037738007});
 		cvtObj(HeadTool,'Pg_s',3,nunits,{kPa:0.145037738007});
+		cvtObj(HeadTool,'Pd',3,nunits,{kPa:0.145037738007});		
+		cvtObj(HeadTool,'Zs',2,nunits,{m:3.280839895});
+		cvtObj(HeadTool,'Ztnk_s',2,nunits,{m:3.280839895});
+		cvtObj(HeadTool,'Zd',2,nunits,{m:3.280839895});
 		saveProp('headtool',HeadTool);
 		Units = nunits;
 		saveProp('units',Units);
