--- a/conditions.html
+++ b/conditions.html
@@ -178,6 +178,8 @@
 			cvtObj(d,'head',2,nunits,{m:3.280839895});
 		});
 		saveProp('defCond',DefCond);
+		cvtObj(HeadTool,'Ds',2,nunits,{m:.03937007874});
+		cvtObj(HeadTool,'Dd',2,nunits,{m:.03937007874});		
 		cvtObj(HeadTool,'Ps',3,nunits,{kPa:0.145037738007});
 		cvtObj(HeadTool,'Pg_s',3,nunits,{kPa:0.145037738007});
 		cvtObj(HeadTool,'Pd',3,nunits,{kPa:0.145037738007});		
