--- a/headtool.html
+++ b/headtool.html
@@ -34,7 +34,7 @@
 			Suction pipe diameter<br>
 			<input name=Ds><br>
 			<label>Suction tank<br>
-				<input name=suc onclick='suction(this)' type=checkbox>
+				<input name=suc onchange='suction(this)' type=checkbox>
 			</label>
 			<div id="sucGauge">
 				Suction gauge pressure<br>
