--- a/conditions.html
+++ b/conditions.html
@@ -30,88 +30,93 @@
 		background-color: lightgray;
 		cursor: pointer;
 	}
+	p button {
+		float:left;
+	}
 </style>
-<button onclick='reset()'>RESET</button>
-<button onclick="imprt()">IMPORT</button>
-<button class=gt0 onclick="xprt()">EXPORT</button>
-<h1>Units</h1>
-<div id="units">
-	<label><input type=radio name=unit_sys></input> Imperial</label>
-	<label><input type=radio name=unit_sys></input> Metric</label>
-	<label><input type=radio name=unit_sys></input> Custom</label>
-	<p>
-	<table>
+<div style='display: inline-block'>
+	<button onclick='reset()'>RESET</button>
+	<button onclick="imprt()">IMPORT</button>
+	<button class=gt0 onclick="xprt()">EXPORT</button>
+	<h1>Units</h1>
+	<div id="units">
+		<label><input type=radio name=unit_sys></input> Imperial</label>
+		<label><input type=radio name=unit_sys></input> Metric</label>
+		<label><input type=radio name=unit_sys></input> Custom</label>
+		<p>
+		<table>
+			<tr>
+				<th></th>
+				<th>Imperial</th>
+				<th>Metric</th>
+				<th>Custom</th>
+			</tr>
+			<tr>
+				<td>Flow</td>
+				<td>gpm</td>
+				<td>m^3/hr</td>
+				<td>
+					<select>
+						<option>gpm</option>
+						<option>MGD</option>
+						<option>m^3/hr</option>
+						<option>L/s</option>
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<td>Power</td>
+				<td>hp</td>
+				<td>kW</td>
+				<td>
+					<select>
+						<option>hp</option>
+						<option>kW</option>				
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<td>Distance</td>
+				<td>ft</td>
+				<td>m</td>
+				<td>
+					<select>
+						<option>ft</option>
+						<option>m</option>
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<td>Pressure</td>
+				<td>psig</td>
+				<td>kPa</td>
+				<td>
+					<select>
+						<option>psig</option>
+						<option>kPa</option>
+					</select>
+				</td>
+			</tr>
+		</table>
+	</div>
+	<h1>Conditions</h1>
+	<table id=cond>
 		<tr>
-			<th></th>
-			<th>Imperial</th>
-			<th>Metric</th>
-			<th>Custom</th>
+			<td><input type="checkbox" onclick="setGrid(this)"></td>
+			<td onclick='edit(this)'></td>
+			<td><button onclick='rm(this)'><i class="fa fa-times"></i></button></td>
+			<td><button onclick='cp(this)'><i class="fa fa-plus"></i></button></td>
 		</tr>
 		<tr>
-			<td>Flow</td>
-			<td>gpm</td>
-			<td>m^3/hr</td>
-			<td>
-				<select>
-					<option>gpm</option>
-					<option>MGD</option>
-					<option>m^3/hr</option>
-					<option>L/s</option>
-				</select>
-			</td>
-		</tr>
-		<tr>
-			<td>Power</td>
-			<td>hp</td>
-			<td>kW</td>
-			<td>
-				<select>
-					<option>hp</option>
-					<option>kW</option>				
-				</select>
-			</td>
-		</tr>
-		<tr>
-			<td>Distance</td>
-			<td>ft</td>
-			<td>m</td>
-			<td>
-				<select>
-					<option>ft</option>
-					<option>m</option>
-				</select>
-			</td>
-		</tr>
-		<tr>
-			<td>Pressure</td>
-			<td>psig</td>
-			<td>kPa</td>
-			<td>
-				<select>
-					<option>psig</option>
-					<option>kPa</option>
-				</select>
-			</td>
+			<td><input class=gt0 type="checkbox" checked onclick='chkAll(this)'></input></td>
 		</tr>
 	</table>
+	<p>
+		<button class=prime onclick='nu()'>NEW</button>
+		<button class=prime id=grid onclick='grid()'><i class="fa fa-table"></i></button>
+		<button style='float:right' class=gt0 onclick='removeAll()'>REMOVE ALL</button>
+	</p>
 </div>
-<h1>Conditions</h1>
-<table id=cond>
-	<tr>
-		<td><input type="checkbox" onclick="setGrid(this)"></td>
-		<td onclick='edit(this)'></td>
-		<td><button onclick='rm(this)'><i class="fa fa-times"></i></button></td>
-		<td><button onclick='cp(this)'><i class="fa fa-plus"></i></button></td>
-	</tr>
-	<tr>
-		<td><input class=gt0 type="checkbox" checked onclick='chkAll(this)'></input></td>
-	</tr>
-</table>
-<p>
-<button class=prime onclick='nu()'>NEW</button>
-<button class=gt0 onclick='removeAll()'>REMOVE ALL</button>
-<button class=prime id=grid onclick='grid()'><i class="fa fa-table"></i></button>
-
 <script>
 	function listIdx(e) {
 		return parIdx(e.parentElement,-2);
