--- a/grid.html
+++ b/grid.html
@@ -264,7 +264,7 @@
     Flow = nm('flow',col(e)).val();
     SG = nm('specific_gravity',col(e)).val();
     HeadEl = nm('head',col(e));
-    backload("headtool");
+    backload("headTool");
   }
   function edit(e) {
     Idx = $(e).parent().data('idx');
