--- a/headtool.html
+++ b/headtool.html
@@ -158,7 +158,7 @@
 		$('#accept').show();
 
 		setData(HeadTool);
-		saveProp('headtool',HeadTool);
+		saveProp('headTool',HeadTool);
 	}
 	function em(t) {
 		return ` <em>(${t})</em>`;
