--- a/conditions.html
+++ b/conditions.html
@@ -192,7 +192,7 @@
 		cvtObjHd(['Ds','Dd'],2,{m:.03937007874});		
 		cvtObjHd(['Ps','Pg_s','Pd'],3,{kPa:0.145037738007});
 		cvtObjHd(['Zs','Ztnk_s','Zd'],2,{m:3.280839895});
-		saveProp('headTool',HeadTool);
+		saveHd();
 		Units = nunits;
 		saveProp('units',Units);
 		saveCond();
