--- a/conditions.html
+++ b/conditions.html
@@ -22,7 +22,9 @@
 	#units table {
 		border-collapse: collapse;
 	}
-
+	#cond td>* {
+		display: block;
+	}
 	#cond tr:first-child {
 		display: none;
 	}
