--- a/grid.html
+++ b/grid.html
@@ -175,10 +175,9 @@
   </tr>
   <tr id=results>
     <td class='th'>
-      <div>
-        <button onclick=results()><i class="fa fa-plus"/></button>
-        <span>Results</span>
-        <button onclick='backload("curve")'>
+      <div style='justify-content:center'>        
+        Results
+        <button style='margin-left:.5rem' onclick='backload("curve")'>
           <i class="fa fa-line-chart"/>
         </button>
       </div>
