--- a/grid.html
+++ b/grid.html
@@ -191,39 +191,39 @@
     <td><div>Motor rated power</div></td><td></td>
   </tr>
   <tr>
-    <td><div>Motor shaft power</div></td><td class='result'><span></span></td>
+    <td><div>Motor shaft power</div></td><td></td>
   </tr>
   <tr>
-    <td><div>Pump shaft power</div></td><td class='result'><span></span></td>
+    <td><div>Pump shaft power</div></td><td></td>
   </tr>
   <tr>
-    <td><div>Motor efficiency <em>(%)</em></div></td><td class='result'><span></span></td>
+    <td><div>Motor efficiency <em>(%)</em></div></td><td></td>
   </tr>
   <tr>
-    <td><div>Motor power factor <em>(%)</em></div></td><td class='result'><span></span></td>
+    <td><div>Motor power factor <em>(%)</em></div></td><td></td>
   </tr>
   <tr>
-    <td><div>Motor current <em>(amps)</em></div></td><td class='result'><span></span></td>
+    <td><div>Motor current <em>(amps)</em></div></td><td></td>
   </tr>
   <tr>
-    <td><div>Motor power</div></td><td class='result'><span></span></td>
+    <td><div>Motor power</div></td><td></td>
   </tr>
   <tr>
-    <td><div>Annual energy <em>(MWh)</em></div></td><td class='result'><span></span></td>
+    <td><div>Annual energy <em>(MWh)</em></div></td><td></td>
   </tr>
   <tr>
-    <td>Annual cost</td><td class='result'><span></span></td>
+    <td>Annual cost</td><td></td>
   </tr>
   <tr>
     <td class=th>Summary</td><td></td>
   </tr>
   <tr class=sum>
     <td>Savings potential</td>
-    <td class='result'><span></span></td>
+    <td></td>
   </tr>
   <tr class=sum>
     <td>Optimization rating</td>
-    <td class='result'><span></span></td>
+    <td></td>
   </tr>
 </table>
 <p>
