--- a/grid.html
+++ b/grid.html
@@ -250,7 +250,7 @@
     });
   }
   function results() {
-    r('Pump efficiency',123,456);
+    r('Pump efficiency',Bridge.pumpEff(),456);
     r('Motor rated power',83948.23,1928.6);    
 
     $('#results,#results~tr').show();
