--- a/grid.html
+++ b/grid.html
@@ -250,8 +250,8 @@
     });
   }
   function results() {
-    r('Pump efficiency',Bridge.pumpEff(),456);
-    r('Motor rated power',Bridge.mrp(),1928.6);    
+    r('Pump efficiency',Bridge.results(),456);
+    //r('Motor rated power',Bridge.mrp(),1928.6);    
 
     // r('Motor rated power',83948.23,1928.6);    
 
