--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         text-align: center;
         white-space: nowrap;
       }
+      td {
+        white-space: nowrap;
+      }
       td > * {
         vertical-align: middle;
       }
