--- a/grid.html
+++ b/grid.html
@@ -250,7 +250,7 @@
         r=Bridge.results(nm('stages',col).val());
       let j=0;;
       col.filter('#results~tr:not(.th) td').each((i,e)=>{
-        $(e).html(`<div><span>${r[2*i]}</span>
+        $(e).html(`<div><span>${r[2*i]>=0?r[2*i]:''}</span>
                         <span style='color: green'>${r[2*i+1]}</span></div>`);
       });
     });
