--- a/grid.html
+++ b/grid.html
@@ -246,13 +246,8 @@
 <script>
   function results() {
     $('th:gt(1)').each((i,e)=>{
-      const col=$(`td:nth-child(${$(e).index()+1})`);
-      const inp={};
-      nmAll(col).each((i,e)=>{
-        inp[nmGet(e)]=$(e).val();
-      });
-      //debugger;
-      const r=Bridge.results(inp);
+      const col=$(`td:nth-child(${$(e).index()+1})`),
+        r=Bridge.results(setData({},col));
       let j=0;;
       col.filter('#results~tr:not(.th) td').each((i,e)=>{
         $(e).html(`<div><span>${r[2*i]>=0?r[2*i]:''}</span>
