--- a/grid.html
+++ b/grid.html
@@ -156,7 +156,7 @@
       <button onclick='gotoHead(this)'><i class="fa fa-wrench"/></button>
     </td>
   </tr>       
-  <tr>
+  <!--<tr>
     <td>Load estimate method</td>
     <td> 
       <select name='load_method'>
@@ -164,14 +164,14 @@
         <option>Current</option>
       </select>
     </td>
-  </tr>
+  </tr>-->
   <tr>
     <td>Power</td>
-    <td><input name='motor_field_power'></td>
+    <td><input name='motor_field_power' onchange="chgPower(this)"></td>
   </tr>
   <tr>
     <td>Current</td>
-    <td><input name='motor_field_current'></td>
+    <td><input name='motor_field_current' onchange="chgCurrent(this)"></td>
   </tr>
   <tr>
     <td>Voltage</td>
@@ -248,6 +248,25 @@
 </dialog>
 
 <script>
+
+  function colCond(e) {
+    return Cond[$(e).parent().data('idx')];
+  }  
+
+  function effChg(e) {
+    if ($(e).val()=='Custom') {
+      $(e).next().show();      
+    } else {
+      $(e).next().hide();
+    }
+  }
+  function chgPower(e) {
+    nm('motor_field_current',col(e)).val('');
+  }
+  function chgCurrent(e) {
+    nm('motor_field_power',col(e)).val('');  
+  }
+  
   function showHdResults(show) {
     $('#results,#results~tr').toggle(show);
     $('p button').toggle(!show);
@@ -264,18 +283,6 @@
       });
     });
     showHdResults(true);
-  }
-
-  function colCond(e) {
-    return Cond[$(e).parent().data('idx')];
-  }  
-
-  function effChg(e) {
-    if ($(e).val()=='Custom') {
-      $(e).next().show();      
-    } else {
-      $(e).next().hide();
-    }
   }
 
   function gotoHead(e) {
@@ -371,6 +378,6 @@
 
   nmAll('#grid').change(function() {
     ioBtn(this).addClass('prime');
-    showHdResults();
+    showHdResults(false);
   });
 </script>
