--- a/grid.html
+++ b/grid.html
@@ -166,15 +166,15 @@
     </td>
   </tr>-->
   <tr>
-    <td>Power</td>
+    <td>Motor Power</td>
     <td><input name='motor_field_power' onchange="chgPower(this)"></td>
   </tr>
   <tr>
-    <td>Current</td>
+    <td><div>Motor Current<em>(A)</em></div></td>
     <td><input name='motor_field_current' onchange="chgCurrent(this)"></td>
   </tr>
   <tr>
-    <td>Voltage</td>
+    <td><div>Motor Voltage<em>(V)</em></div></td>
     <td><input name='motor_field_voltage'></td>
   </tr>
   <tr id=results>
